# media-semantic-search

./: README.md  README_en.md  pyproject.toml  run_server.bat  run_test.bat  test_api.py
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-dataset-foundation/: .continue-here.md  01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-SUMMARY.md  01-VALIDATION.md
.planning/phases/02-semantic-search-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-api-and-interface/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md
data/: dataset.json
src/: __init__.py
src/api/: __init__.py  media_search.py
src/cli/: __init__.py  main.py
src/models/: __init__.py  media.py
src/search/: __init__.py  embedder.py  index.py  search_result.py  semantic_search.py
src/validators/: __init__.py  dataset_validator.py
tests/: conftest.py  test_api.py  test_cli.py  test_embedder.py  test_index.py  test_search_performance.py  test_search_result.py  test_semantic_search.py  test_validators.py
