[project]
name = "rag-demo1"
version = "0.1.0"
description = "Multimedia Dataset Retrieval System"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
